--- a/shipping.service
+++ b/shipping.service
@@ -4,7 +4,7 @@ Description=Shipping Service
 [Service]
 User=roboshop
 Environment=CART_ENDPOINT=cart.jakdevops.online:8080
-Environment=DB_HOST=mysql/jakdevops.online
+Environment=DB_HOST=mysql.jakdevops.online
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
 
